unpackaged/main/default/objects/FSL__GanttPalette__c/FSL__GanttPalette__c.object-meta.xml
<CustomObject>
    <label>Gantt Palette</label>
    <nameField>
        <label>Gantt Palette Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gantt Palettes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>