unpackaged/main/default/objects/FSL__GanttPalette__c/fields/FSL__Active__c.field-meta.xml
<CustomField>
    <fullName>FSL__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>