unpackaged/main/default/objects/FSL__GanttPalette__c/fields/FSL__ColorLevel__c.field-meta.xml
<CustomField>
    <fullName>FSL__ColorLevel__c</fullName>
    <defaultValue>6</defaultValue>
    <label>Color Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>