unpackaged/main/default/objects/FSL__GanttPalette__c/fields/FSL__ColorScheme__c.field-meta.xml
<CustomField>
    <fullName>FSL__ColorScheme__c</fullName>
    <label>Color Scheme</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>