unpackaged/main/default/objects/FSL__GanttPalette__c/fields/FSL__ServiceProperty__c.field-meta.xml
<CustomField>
    <fullName>FSL__ServiceProperty__c</fullName>
    <label>Service Property</label>
    <length>50</length>
    <type>Text</type>
</CustomField>