unpackaged/main/default/objects/FSL__GanttPalette__c/listViews/FSL__All.listView-meta.xml
<ListView>
    <fullName>FSL__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>